[gd_scene load_steps=10 format=3 uid="uid://dkeph3lm33fjb"]

[ext_resource type="Script" uid="uid://cyb36m76e7eps" path="res://main menu bg/main_menu.gd" id="1_sepwh"]
[ext_resource type="VideoStream" uid="uid://jbchp42qhmkl" path="res://main menu bg/parusa homescreen.ogv" id="2_sepwh"]
[ext_resource type="Script" uid="uid://d2abhrobcx7ji" path="res://main menu bg/h_slider.gd" id="3_2atga"]
[ext_resource type="FontFile" uid="uid://cni2e2jgi8ela" path="res://images/asssets/text/Super Pixel Personal Use.ttf" id="3_14wem"]
[ext_resource type="AudioStream" uid="uid://dbgqw1037krwu" path="res://main menu bg/RPReplay_Final1769612477.mp3" id="5_sepwh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtjmy"]
bg_color = Color(0.10931852, 0.10931852, 0.10931852, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fu7sn"]
thickness = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0.44666582, 0.56580967, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0.44666582, 0.56580967, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sepwh")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_sepwh")
volume_db = -80.0
autoplay = true
expand = true
loop = true

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 447.0
offset_right = 507.0
offset_bottom = 542.6
theme_override_colors/font_color = Color(16.638432, 16.638432, 16.638432, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_14wem")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "START"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 557.0
offset_right = 506.0
offset_bottom = 648.5
theme_override_colors/font_color = Color(16.638432, 16.638432, 16.638432, 1)
theme_override_fonts/font = ExtResource("3_14wem")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "EXIT
"

[node name="option" type="Button" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 659.0
offset_right = 507.0
offset_bottom = 755.0
theme_override_colors/font_color = Color(16.638432, 16.638432, 16.638432, 1)
theme_override_fonts/font = ExtResource("3_14wem")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "OPTION"

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -419.5
offset_top = -270.875
offset_right = 419.5
offset_bottom = 270.875
grow_horizontal = 2
grow_vertical = 2

[node name="options" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 0.5
offset_top = 59.875
offset_right = 0.5
offset_bottom = 110.875
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_14wem")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"
horizontal_alignment = 1

[node name="VOLUME" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 123.5
offset_top = 202.875
offset_right = -592.5
offset_bottom = 227.875
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_14wem")
theme_override_font_sizes/font_size = 24
text = "VOLUME"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 160.875
offset_right = 329.0
offset_bottom = 264.9375
grow_horizontal = 2
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_nlkkf")
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("3_2atga")
audio_bus_name = "Musika"

[node name="exit2" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 204.0
offset_right = 109.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(16.638432, 16.638432, 16.638432, 1)
theme_override_fonts/font = ExtResource("3_14wem")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_wtjmy")
text = "BACK	
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sepwh")
volume_db = 24.0
autoplay = true
bus = &"Musika"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="option" to="." method="_on_button_2_pressed"]
[connection signal="value_changed" from="Options/HSlider" to="Options/HSlider" method="_on_value_changed"]
[connection signal="pressed" from="Options/exit2" to="." method="_on_back_options_pressed"]
